# GraphODA

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  Graph.cpp  Graph.hpp  Makefile  README.md  TODO.txt  Vector.cpp  build_docs.sh  coverage.sh  format.sh  grafo.txt  graphODA  infoGraph  installDeps.sh  leiame.txt  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
assets/: BOTOES_OP 2.txt  Botoes.txt  graphODA.desktop
assets/fontes/: www.dafontfree.net.url
cmake/: SFML.pref
coverage/: index.controllers_repl_Repl.cpp.html  index.html  index.models_dataStructures_DSU.cpp.html  index.models_dataStructures_Vector.cpp.html  index.models_graph_Bipartite.cpp.html  index.models_graph_Chordal.cpp.html  index.models_graph_Dag.cpp.html  index.models_graph_Graph.cpp.html  index.models_graph_GraphGen.cpp.html  index.models_graph_Tree.cpp.html  index.utils_Assets.cpp.html  index.views_Buttons.cpp.html  index.views_GraphCanvas.cpp.html  index.views_GraphDisplay.cpp.html  index.views_Interface.cpp.html
docs/: PDS2 - Google Drive.html  dependencias.md
docs/PDS2 - Google Drive_files/: api.js  cb=gapi.loaded_2  googleapis.proxy.js  m=core  postmessageRelay.html  proxy.html  rpc_shindig_random.js  rs=AA2YrTsuvp5Dh0gg0etnMl9zi-KzDhwzow  rs=AA2YrTuA4eOBnO05hnvmeFwG4ZU1iHpJ5A  rs=AFB8gszMLRHXKkGBY7LSxztE2KQw0DAWww
docs/coverage/: index.controllers_repl_Repl.cpp.html  index.html  index.models_dataStructures_DSU.cpp.html  index.models_dataStructures_Vector.cpp.html  index.models_graph_Bipartite.cpp.html  index.models_graph_Chordal.cpp.html  index.models_graph_Dag.cpp.html  index.models_graph_Graph.cpp.html  index.models_graph_GraphGen.cpp.html  index.models_graph_Tree.cpp.html  index.views_Buttons.cpp.html  index.views_GraphCanvas.cpp.html  index.views_GraphDisplay.cpp.html  index.views_Interface.cpp.html
docs/doxygen/html/: Bipartite_8hpp.html  Bipartite_8hpp_source.html  Buttons_8hpp_source.html  Chordal_8hpp.html  Chordal_8hpp_source.html  DSU_8hpp.html  DSU_8hpp_source.html  Dag_8hpp.html  Dag_8hpp_source.html  GraphCanvas_8hpp.html  GraphCanvas_8hpp_source.html  GraphDisplay_8hpp.html  GraphDisplay_8hpp_source.html  GraphGen_8hpp.html  GraphGen_8hpp_source.html  Graph_8hpp.html  Graph_8hpp_source.html  Interface_8hpp_source.html  Repl_8hpp.html  (+80 more)
docs/user stories/: Adicao Grafica.md  Caminho Minimo.md  Exportacao de Imagem.md  Matching Maximo.md  Numero Cromatico.md
grafos/: grafo10.txt  grafo11.txt  grafo12.txt  grafo13.txt  grafo14.txt  grafo15.txt  grafo2.txt  grafo3.txt  grafo4.txt  grafo5.txt  grafo6.txt  grafo7.txt  grafo8.txt  grafo9.txt
html/: Assets_8hpp_source.html  Bipartite_8hpp.html  Bipartite_8hpp_source.html  Buttons_8hpp_source.html  Chordal_8hpp.html  Chordal_8hpp_source.html  DSU_8hpp.html  DSU_8hpp_source.html  Dag_8hpp.html  Dag_8hpp_source.html  GraphCanvas_8hpp.html  GraphCanvas_8hpp_source.html  GraphDisplay_8hpp.html  GraphDisplay_8hpp_source.html  GraphGen_8hpp.html  GraphGen_8hpp_source.html  Graph_8hpp.html  Graph_8hpp_source.html  Interface_8hpp_source.html  Repl_8hpp.html  Repl_8hpp_source.html  Tree_8hpp.html  Tree_8hpp_source.html  Vector_8hpp.html  Vector_8hpp_source.html  annotated.html  autotoc_md0.html  bkpGraphGen_8hpp.html  bkpGraphGen_8hpp_source.html  classBipartite-members.html  classBipartite.html  classBipartiteConstructorException-members.html  classBipartiteConstructorException.html  classChordal-members.html  classChordal.html  classChordalConstructorException-members.html  classChordalConstructorException.html  classDSU-members.html  classDSU.html  classDSUException-members.html  (+67 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.html  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_10.js  functions_11.html  functions_11.js  functions_12.html  (+34 more)
include/dataStructures/: DSU.hpp
include/display/: GraphCanvas.hpp  GraphDisplay.hpp  Interface.hpp
include/graph/: Bipartite.hpp  Chordal.hpp  Dag.hpp  Graph.hpp  GraphGen.hpp  Tree.hpp
include/repl/: Repl.hpp
include/utils/: Assets.hpp
include/vector/: Vector.hpp
include/views/: Buttons.hpp  GraphCanvas.hpp  GraphDisplay.hpp  Interface.hpp
latex/: Bipartite_8hpp.tex  Chordal_8hpp.tex  DSU_8hpp.tex  Dag_8hpp.tex  GraphCanvas_8hpp.tex  GraphDisplay_8hpp.tex  GraphGen_8hpp.tex  Graph_8hpp.tex  Repl_8hpp.tex  Tree_8hpp.tex  Vector_8hpp.tex  annotated.tex  autotoc_md0.tex  bkpGraphGen_8hpp.tex  classBipartite.eps  classBipartite.tex  classBipartiteConstructorException.eps  classBipartiteConstructorException.tex  classChordal.eps  classChordal.tex  classChordalConstructorException.eps  classChordalConstructorException.tex  classDSU.tex  classDSUException.eps  classDSUException.tex  classDSUNegativeConstructorParameterException.eps  classDSUNegativeConstructorParameterException.tex  classDSUValueOutOfBoundsException.tex  classDag.tex  classDagConstructorException.eps  classDagConstructorException.tex  classFileNotFoundException.tex  classGraph.eps  classGraph.tex  classGraphCanvas.tex  classGraphDisplay.tex  classGraphException.eps  classGraphException.tex  classGraphGen.eps  classGraphGen.tex  (+35 more)
src/: main.cpp
src/dataStructures/: DSU.cpp
src/display/: DrawGraph.cpp  DrawGraph.hpp  GraphCanvas.cpp  GraphDisplay.cpp  GraphDisplay.hpp  Interface.cpp  Interface.hpp
src/graph/: Bipartite.cpp  Chordal.cpp  Dag.cpp  Graph.cpp  Graph.hpp  GraphGen.cpp  Tree.cpp
src/repl/: Repl.cpp
src/utils/: Assets.cpp
src/vector/: Vector.cpp  Vector.hpp
src/views/: .Buttons.cpp.swp  Buttons.cpp  GraphCanvas.cpp  GraphDisplay.cpp  Interface.cpp
tests/: CMakeLists.txt  TestBipartite.cpp  TestChordal.cpp  TestDag.cpp  TestGraph.cpp  TestGraphGen.cpp  TestInterface.cpp  TestRepl.cpp  TestTree.cpp  TestVector.cpp  doctest.h
(+91 files in other folders)
